# djpress-publish-mastodon

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: release.yml
src/djpress_publish_mastodon/: __init__.py  plugin.py  plugin.toml
